--- a/docker-tools/Dockerfile
+++ b/docker-tools/Dockerfile
@@ -3,7 +3,7 @@ LABEL \
 	maintainer="Davide Alberani <da@erlug.linux.it>" \
 	vendor="RaspiBO"
 
-VOLUME ["/data"]
+# VOLUME ["/data"]
 
 COPY run.sh /
 ENTRYPOINT ["/run.sh"]
